--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation("com.google.firebase:firebase-auth-ktx")
 
     // Unit tests
     testImplementation 'junit:junit:4.13.2'
