--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation("com.google.firebase:firebase-auth-ktx")
+    implementation("com.google.firebase:firebase-database-ktx")
+    implementation("com.google.firebase:firebase-storage")
 
     // Dagger Hilt
     implementation "com.google.dagger:hilt-android:2.44"
