--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,8 @@ dependencies {
     implementation("com.google.firebase:firebase-storage")
 
     // Dagger Hilt
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+    implementation 'com.google.dagger:hilt-android:2.50'
+    kapt 'com.google.dagger:hilt-compiler:2.50'
 
     // Livecycle
     def lifecycle_version = "2.6.2"
@@ -70,6 +70,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    // GLide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     // Unit tests
