--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        splashscreen_version = "1.0.1"
+        daggerhilt_version = "2.50"
+        lifecycle_version = "2.6.2"
+        navigation_version = "2.7.6"
+        glide_version = "4.16.0"
+    }
+}
+
 plugins {
-id 'com.android.application' version '8.2.0' apply false
+    id 'com.android.application' version '8.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
     id 'com.google.gms.google-services' version '4.4.0' apply false
     id 'com.google.dagger.hilt.android' version '2.50' apply false
